samples/_failures_safe/1761555405_28baff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb611100.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_cb611100.c:132:40: error: expected ‘)’ at end of input
  132 |                 if (isInMinHeap(minHeap
      |                                ~       ^
      |                                        )
./samples/SAFE/__tmp_cb611100.c:132:21: error: too few arguments to function ‘isInMinHeap’
  132 |                 if (isInMinHeap(minHeap
      |                     ^~~~~~~~~~~
./samples/SAFE/__tmp_cb611100.c:103:5: note: declared here
  103 | int isInMinHeap(struct MinHeap *minHeap, int v) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_cb611100.c:132:17: error: expected declaration or statement at end of input
  132 |                 if (isInMinHeap(minHeap
      |                 ^~
./samples/SAFE/__tmp_cb611100.c:132:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb611100.c:132:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb611100.c:132:17: error: expected declaration or statement at end of input
